<resources>
    <string name="app_name">Babyka</string>

    <!-- Main screen -->
    <string name="main_screen_share_title">Share</string>
    <string name="main_screen_share_text">Babyka Android Application - Limit kid access to apps
        and games by simple exercises.
        You solve - you play! - http://kevers.top</string>
    <string name="main_screen_permission_dialog_text">Application requires permission for gathering
        other installed apps data.</string>
    <string name="main_screen_permission_dialog_button_label">Grant</string>
    <string name="main_screen_exercise_settings">Exercise settings</string>
    <string name="main_screen_feedback">Feedback</string>
    <string name="main_screen_blocker_activated">Blocker activated</string>
    <string name="main_screen_blocker_deactivated">Blocker deactivated</string>
    <string name="main_screen_set_parent_password_recommendation_text">We recommend to set parent
        password for app launch. Just navigate to exercise settings menu.</string>
    <string name="main_screen_set_parent_password_recommendation_button_label">Go to settings</string>
    <string name="main_screen_user_feedback_request_text">Thank you for using our app. We hope you
        find it useful. If you have some questions or ideas - send your reply directly to developers.</string>
    <string name="main_screen_user_feedback_recommendation_button_label">Send reply</string>
    <string name="main_screen_activated">Activated</string>
    <string name="main_screen_deactivated">Deactivated</string>
    <string name="main_screen_wrong_password">Wrong password</string>

    <!-- Exercise settings screen -->
    <string name="exercise_settings_new_label">NEW</string>
    <string name="exercise_settings_purchase_dialog_button_label">Go to shop</string>
    <string name="exercise_settings_purchase_text">This is paid exercise module. It can be unlocked
        from Google Play</string>
    <string name="exercise_settings_share_math_text">Share Babyka to unlock additional settings for
        math module. By default, there are addition exercises for numbers from 1 to 10.</string>
    <string name="exercise_settings_screent_title">Exercise settings</string>
    <string name="exercise_settings_screen_share">Share</string>
    <string name="exercise_settings_screen_parent_password">Parent password</string>
    <string name="exercise_settings_screen_sound_support">Sound support</string>
    <string name="exercise_settings_screen_number_of_exercises_in_session">Number of exercises in
        session</string>
    <string name="exercise_settings_screen_math">Math</string>
    <string name="exercise_settings_screen_math_description">Provides arithmetic exercises for all
        four basic operarions. You can adjust complexity by changing number of operations and number
        range.</string>
    <string name="exercise_settings_screen_test">Test</string>
    <string name="exercise_settings_screen_odd_picture">Odd picture</string>
    <string name="exercise_settings_screen_odd_picture_description">Provides four pictures, one of
        which is odd. To pass the exercise you should find this odd picture.</string>
    <string name="exercise_settings_screen_clock">Clock</string>
    <string name="exercise_settings_screen_clock_description">Represent a classical clock with
        arrows. You should enter correct time, base on arrows placement.</string>
    <string name="exercise_settings_screen_unlock">Unlock</string>
    <string name="exercise_settings_screen_find_color">Find color</string>
    <string name="exercise_settings_screen_color_description">Show a ten basic colors, randomly
        placed. Child should pick one of those colors.</string>
    <string name="exercise_settings_screen_exercises_tip_text">Here you can add or remove modules
        from exercise pool. Just tick a checkbox. Notice, that app choose exercise randomly from
        exercise pool.</string>
    <string name="exercise_settings_screen_one_type_warning">At least one exercise type should be activated</string>
    <string name="exercise_settings_screen_password_dont_match">Passwords dont match</string>
    <string name="exercise_settings_screen_password_saved">Password saved</string>
    <string name="exercise_settings_screen_new_item">New</string>
    <string name="exercise_settings_screen_memory">Visual memory</string>
    <string name="exercise_settings_screen_memory_description">Classic exercise for strengthening
        visual memory. App will show group of pictures for limited amout of time. After that pictures
        become hidden, and you have to find specified picture. You can adjust number of pictures,
        display time and number of mistakes befor exercise restart.</string>
    <string name="exercise_settings_screen_number_of_memory_pictures">Number of pictures(2–8)</string>
    <string name="exercise_settings_screen_number_of_mistakes_pictures">Number of mistakes</string>
    <string name="exercise_settings_screen_memory_display_time">Display time(seconds)</string>

    <!-- Feedback screen -->
    <string name="feedback_screen_title">Feedback</string>
    <string name="feedback_screen_send_email_feedback_directly_to_developers">Send email feedback
        directly to developers</string>
    <string name="feedback_screen_send">Send</string>

    <!-- Dialogs -->
    <string name="dialogs_enter_password">Enter password</string>
    <string name="dialogs_password">Password</string>
    <string name="dialogs_set_parent_password">Set parent password</string>
    <string name="dialogs_repeat_password">Repeat password</string>

    <!-- Clock exercise screen -->
    <string name="clock_exercise_screen_hours">Hours</string>
    <string name="clock_exercise_screen_minutes">Minutes</string>
    <string name="clock_exercise_screen_check">Check</string>

    <!-- Color exercise screen -->
    <string name="color_exercise_screen_choose">Choose</string>
    <string name="color_exercise_screen_red">RED</string>
    <string name="color_exercise_screen_orange">ORANGE</string>
    <string name="color_exercise_screen_yellow">YELLOW</string>
    <string name="color_exercise_screen_green">GREEN</string>
    <string name="color_exercise_screen_light_blue">LIGHT BLUE</string>
    <string name="color_exercise_screen_blue">BLUE</string>
    <string name="color_exercise_screen_purple">PURPLE</string>
    <string name="color_exercise_screen_white">WHITE</string>
    <string name="color_exercise_screen_gray">GRAY</string>
    <string name="color_exercise_screen_black">BLACK</string>
    <string name="color_exercise_screen_pink">PINK</string>
    <string name="color_exercise_screen_brown">BROWN</string>

    <!-- Math exercise screen -->
    <string name="math_exercise_screen_check">Check</string>

    <!-- Math exercise settings screen -->
    <string name="math_exercise_settings_screen_max_value">Max value</string>
    <string name="math_exercise_settings_screen_addition">Addition</string>
    <string name="math_exercise_settings_screen_substraction">Subtraction</string>
    <string name="math_exercise_settings_screen_multiplication">Multiplication</string>
    <string name="math_exercise_settings_screen_division">Division</string>
    <string name="math_exercise_settings_screen_one_operaion_warning">At least one operation should
        be selected</string>

    <!-- Picture exercise screen -->
    <string name="picture_exercise_screen_pick_odd_picture">Pick odd picture</string>

    <!-- Memory exercise screen -->
    <string name="memory_exercise_screen_find_picture">Find - </string>

</resources>
